@@ -65,6 +65,8 @@ Ver.6-dev (in development)
 - Messages from INTER-Mediator can be customized with the params.php file. The 'messages' variable is used for storing
   replacing/adding messages. The value of the messages variable has to be the 2-dimensional array with the language and
   the message number as indices. The params.php file has a sample of overwriting messages.
+- INTERMediatorOnPage.doBeforePartialConstruct and INTERMediatorOnPage.doAfterPartialConstruct methods can be defined.
+  These are called just before/after to construct the page partially, i.e. INTERMediator.constructMain(<Existing Context>.
 - [BUG FIX] After the password of ldap user is changed, propagation of the new password is improved.
 - [BUG FIX] Buttons on pagination (ex. Insert...) was disappeared in case of clicking Insert button on related context.
 - [BUG FIX] Cache mode did't work. This bug is added after branching 6(master) and 5.x.
